[BUG-4284] Arreglados algunos warnings pendientes del sonnar y eliminados